--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -8302,10 +8302,14 @@ Section Title
   color: #aab3bb;
   margin-bottom: 20px;
 }
-.main-footer .about-widget .contact-info {
+.main-footer .about-widget .text p{
+  text-align: justify;
+  color: #aab3bb;
+}
+.contact-info {
   position: relative;
 }
-.main-footer .about-widget .contact-info li {
+.contact-info li {
   position: relative;
   padding: 5px 0;
   padding-left: 50px;
@@ -8317,13 +8321,13 @@ Section Title
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
-.main-footer .about-widget .contact-info li a {
+.contact-info li a {
   color: inherit;
   font-weight: 700;
   -webkit-transition: none;
   transition: none;
 }
-.main-footer .about-widget .contact-info li i {
+.contact-info li i {
   position: absolute;
   left: 0;
   top: 0;
@@ -8338,7 +8342,7 @@ Section Title
   transition: all 300ms ease;
   border-radius: 50%;
 }
-.main-footer .about-widget .contact-info li:hover {
+.contact-info li:hover {
   color: var(--theme-color2);
 }
 
